[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/UI_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/DeckReport.gd" type="Script" id=3]

[node name="DeckReport" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1067.0
margin_bottom = 600.0
theme = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_right = 1067.0
margin_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1063.0
margin_bottom = 596.0

[node name="ButtonsAndLabel" type="CenterContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_right = 1059.0
margin_bottom = 592.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/ButtonsAndLabel"]
margin_left = 461.0
margin_top = 244.0
margin_right = 597.0
margin_bottom = 348.0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/ButtonsAndLabel/VBoxContainer"]
margin_right = 136.0
margin_bottom = 20.0
text = "View deck report:"

[node name="CheckPlayer1" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/ButtonsAndLabel/VBoxContainer"]
margin_top = 24.0
margin_right = 136.0
margin_bottom = 48.0
text = "Player 1"

[node name="CheckPlayer2" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/ButtonsAndLabel/VBoxContainer"]
margin_top = 52.0
margin_right = 136.0
margin_bottom = 76.0
text = "Player 2"

[node name="CheckPlayer3" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/ButtonsAndLabel/VBoxContainer"]
margin_top = 80.0
margin_right = 136.0
margin_bottom = 104.0
text = "Player 3"

[node name="ReportTable" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_right = 1059.0
margin_bottom = 592.0

[node name="Panel" type="Panel" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable"]
margin_right = 1059.0
margin_bottom = 592.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel"]
margin_left = 4.0
margin_top = 28.0
margin_right = 1055.0
margin_bottom = 588.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/MarginContainer"]
margin_right = 1051.0
margin_bottom = 560.0

[node name="Records" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/MarginContainer/ScrollContainer"]
margin_right = 997.0
margin_bottom = 20.0

[node name="AttributeLabels" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/MarginContainer/ScrollContainer/Records"]
margin_right = 997.0
margin_bottom = 20.0
alignment = 1

[node name="id" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/MarginContainer/ScrollContainer/Records/AttributeLabels"]
margin_right = 115.0
margin_bottom = 20.0
rect_min_size = Vector2( 115, 0 )
text = "id"
align = 1
valign = 1

[node name="VSeparator" type="VSeparator" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/MarginContainer/ScrollContainer/Records/AttributeLabels"]
margin_left = 119.0
margin_right = 123.0
margin_bottom = 20.0

[node name="name" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/MarginContainer/ScrollContainer/Records/AttributeLabels"]
margin_left = 127.0
margin_right = 242.0
margin_bottom = 20.0
rect_min_size = Vector2( 115, 0 )
text = "name"
align = 1
valign = 1

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/MarginContainer/ScrollContainer/Records/AttributeLabels"]
margin_left = 246.0
margin_right = 250.0
margin_bottom = 20.0

[node name="card_class" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/MarginContainer/ScrollContainer/Records/AttributeLabels"]
margin_left = 254.0
margin_right = 369.0
margin_bottom = 20.0
rect_min_size = Vector2( 115, 0 )
text = "card_class"
align = 1
valign = 1

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/MarginContainer/ScrollContainer/Records/AttributeLabels"]
margin_left = 373.0
margin_right = 377.0
margin_bottom = 20.0

[node name="art_id" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/MarginContainer/ScrollContainer/Records/AttributeLabels"]
margin_left = 381.0
margin_right = 496.0
margin_bottom = 20.0
rect_min_size = Vector2( 115, 0 )
text = "art_id"
align = 1
valign = 1

[node name="VSeparator4" type="VSeparator" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/MarginContainer/ScrollContainer/Records/AttributeLabels"]
margin_left = 500.0
margin_right = 504.0
margin_bottom = 20.0

[node name="description" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/MarginContainer/ScrollContainer/Records/AttributeLabels"]
margin_left = 508.0
margin_right = 623.0
margin_bottom = 20.0
rect_min_size = Vector2( 115, 0 )
text = "description"
align = 1
valign = 1

[node name="VSeparator5" type="VSeparator" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/MarginContainer/ScrollContainer/Records/AttributeLabels"]
margin_left = 627.0
margin_right = 631.0
margin_bottom = 20.0

[node name="offensive_stat" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/MarginContainer/ScrollContainer/Records/AttributeLabels"]
margin_left = 635.0
margin_right = 743.0
margin_bottom = 20.0
text = "offensive_stat"
align = 1
valign = 1

[node name="VSeparator6" type="VSeparator" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/MarginContainer/ScrollContainer/Records/AttributeLabels"]
margin_left = 747.0
margin_right = 751.0
margin_bottom = 20.0

[node name="defensive_stat" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/MarginContainer/ScrollContainer/Records/AttributeLabels"]
margin_left = 755.0
margin_right = 870.0
margin_bottom = 20.0
rect_min_size = Vector2( 115, 0 )
text = "defensive_stat"
align = 1
valign = 1

[node name="VSeparator7" type="VSeparator" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/MarginContainer/ScrollContainer/Records/AttributeLabels"]
margin_left = 874.0
margin_right = 878.0
margin_bottom = 20.0

[node name="cost" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/MarginContainer/ScrollContainer/Records/AttributeLabels"]
margin_left = 882.0
margin_right = 997.0
margin_bottom = 20.0
rect_min_size = Vector2( 115, 0 )
text = "cost"
align = 1
valign = 1

[node name="CloseReportButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel"]
margin_left = 1031.0
margin_top = 4.0
margin_right = 1055.0
margin_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "X"
icon_align = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel"]
margin_right = 1059.0
margin_bottom = 20.0

[node name="PlayerName" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/CenterContainer"]
margin_left = 453.0
margin_right = 605.0
margin_bottom = 20.0
text = "Player Name's Deck"

[connection signal="button_down" from="MarginContainer/PanelContainer/MarginContainer/ButtonsAndLabel/VBoxContainer/CheckPlayer1" to="." method="_on_CheckPlayer1_button_down"]
[connection signal="button_down" from="MarginContainer/PanelContainer/MarginContainer/ButtonsAndLabel/VBoxContainer/CheckPlayer2" to="." method="_on_CheckPlayer2_button_down"]
[connection signal="button_down" from="MarginContainer/PanelContainer/MarginContainer/ButtonsAndLabel/VBoxContainer/CheckPlayer3" to="." method="_on_CheckPlayer3_button_down"]
[connection signal="button_down" from="MarginContainer/PanelContainer/MarginContainer/ReportTable/Panel/CloseReportButton" to="." method="_on_CloseReportButton_button_down"]
